Updated structure and content

--- a/index.html
+++ b/index.html
@@ -6,5 +6,60 @@
     <title>Simple Travel Site</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <h1 class="logo">Atlanta</h1>
+      <div class="nav-links">
+        <a href="./index.html">home</a>
+        <a href="#">about</a>
+        <a href="#">contact</a>
+        <a href="./cityimages.html">images</a>
+      </div>
+    </nav>
+
+    <main class="content">
+      <section class="centered-content">
+        <h2>Welcome to Atlanta</h2>
+        <p>
+          Atlanta is the capital of the U.S. state of Georgia. It played an
+          important part in both the Civil War and the 1960s Civil Rights
+          Movement. Atlanta History Center chronicles the city's past, and the
+          Martin Luther King Jr. National Historic Site is dedicated to the
+          African-American leader’s life and times. Downtown, Centennial Olympic
+          Park, built for the 1996 Olympics, encompasses the massive Georgia
+          Aquarium.
+        </p>
+      </section>
+    </main>
+
+    <footer class="table">
+      <h2>City Leaders Contact Information</h2>
+      <table border="1" cellpadding="10" cellspacing="0">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John Doe</td>
+            <td>johndoe@email.com</td>
+            <td>(123) 456-7890</td>
+          </tr>
+          <tr>
+            <td>Jane Smith</td>
+            <td>janesmith@email.com</td>
+            <td>(987) 654-3210</td>
+          </tr>
+          <tr>
+            <td>Jordan Smith</td>
+            <td>jordansmith@email.com</td>
+            <td>(555) 123-4567</td>
+          </tr>
+        </tbody>
+      </table>
+    </footer>
+  </body>
 </html>
