Added 2 more images

--- a/cityimages.html
+++ b/cityimages.html
@@ -20,15 +20,15 @@
     <section class="images">
       <h2>Images of Atlanta</h2>
       <div class="image-gallery">
+        <img src="/images/atlanta.jpg" alt="building with atlanta art" />
+        <img src="/images/atlanta2.jpg" alt="another building in Atlanta" />
         <img
-          class="atl1"
-          src="/images/atlanta.jpg"
-          alt="building with atlanta art"
+          src="/images/atlanta3.jpg"
+          alt="Atlanta High rise with Atlanta text"
         />
         <img
-          class="atl2"
-          src="/images/atlanta2.jpg"
-          alt="another building in Atlanta"
+          src="/images/atlanta4.jpg"
+          alt="Olympic rings in Atlanta, Georgia."
         />
       </div>
     </section>
