--- a/cityimages.html
+++ b/cityimages.html
@@ -20,11 +20,11 @@
     <section class="images">
       <h2>Images of Atlanta</h2>
       <div class="image-gallery">
-        <img src="/images/atlanta.jpg" alt="building with atlanta art" />
-        <img src="/images/atlanta2.jpg" alt="another building in Atlanta" />
+        <img src="/images/atlanta.jpg" alt="building with atlanta art." />
+        <img src="/images/atlanta2.jpg" alt="another building in Atlanta." />
         <img
           src="/images/atlanta3.jpg"
-          alt="Atlanta High rise with Atlanta text"
+          alt="Atlanta High rise with Atlanta text."
         />
         <img
           src="/images/atlanta4.jpg"
