Fix for GitHub pages relative file location

--- a/cityimages.html
+++ b/cityimages.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>City Images</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <nav>
@@ -20,14 +20,14 @@
     <section class="images">
       <h2>Images of Atlanta</h2>
       <div class="image-gallery">
-        <img src="/images/atlanta.jpg" alt="building with atlanta art." />
-        <img src="/images/atlanta2.jpg" alt="another building in Atlanta." />
+        <img src="./images/atlanta.jpg" alt="building with atlanta art." />
+        <img src="./images/atlanta2.jpg" alt="another building in Atlanta." />
         <img
-          src="/images/atlanta3.jpg"
+          src="./images/atlanta3.jpg"
           alt="Atlanta High rise with Atlanta text."
         />
         <img
-          src="/images/atlanta4.jpg"
+          src="./images/atlanta4.jpg"
           alt="Olympic rings in Atlanta, Georgia."
         />
       </div>
